[gd_scene load_steps=12 format=2]

[ext_resource path="res://Graphics/Sprites/Ene_Demon_2.png" type="Texture" id=1]
[ext_resource path="res://SRC/En_Boss_Demon_Ice.gd" type="Script" id=2]
[ext_resource path="res://Objects/Enemies/eneStats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/UI/Boss_Meter.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 16.0

[sub_resource type="Animation" id=3]
resource_name = "Attackle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 3 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Spell"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 6, 7, 6, 7, 6, 7, 6 ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 8.0
height = 30.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 7.0
height = 38.0

[node name="En_Boss_Demon_Ice" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 29
script = ExtResource( 2 )

[node name="eneStats" parent="." instance=ExtResource( 3 )]
Enemy_maxHP = 800
Attack = 3
Element = "Ice"
Def = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -12, 0 )
texture = ExtResource( 1 )
hframes = 8

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 15 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attackle = SubResource( 3 )
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 4 )
anims/Spell = SubResource( 5 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 8 )
shape = SubResource( 6 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
modulate = Color( 0.835294, 0.52549, 0.52549, 1 )
position = Vector2( -2, 1 )
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Boss_Meter" parent="CanvasLayer" instance=ExtResource( 4 )]
margin_bottom = 221.0

[node name="HP_Bar" parent="CanvasLayer/Boss_Meter" index="1"]
tint_progress = Color( 0.0941176, 0.592157, 0.654902, 1 )

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="CanvasLayer/Boss_Meter"]
